# pygfm

./: README.md  pyproject.toml
python_gfm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/bridge/: finetune.py  finetune_graph.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
scripts/gcot/: finetune.py  finetune_graph.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
scripts/graphgpt/: STAGE1_1GPU_README.md  STAGE2_1GPU_README.md  ensure_stage1_files.py  extract_graph_projector.py  model_download_links.md  prepare_data.py  prepare_models.py  prepare_models.sh  run_with_config.py
scripts/graphgpt/configs/: train_mem_smoke.yaml  train_mem_template.yaml
scripts/graphkeeper/: finetune.py  finetune_graph.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
scripts/graphmore/: finetune.py  finetune_graph.py  pretrain.py  run_experiments.py
scripts/graphprompt/: finetune.py  finetune_graph.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
scripts/graphtext/: run_icl.py  run_sft.py  run_with_config.py
scripts/graphtext/config/data/: citeseer.yaml  cora.yaml  cornell.yaml  pubmed.yaml  texas.yaml  wisconsin.yaml
scripts/graphtext/configs/: icl.yaml  icl_smoke.yaml  sft.yaml  sft_smoke.yaml
scripts/graphtext/prepare_data/: download_datasets.py  download_datasets_pyg.py  download_datasets_standalone.py  precompute_synth_cache.py
scripts/graver/: README.md  finetune.py  finetune_graph.py  pretrain.py  run_1shot_100task.py
scripts/hgprompt/: finetune.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
scripts/llaga/: run.py
scripts/llaga/configs/: smoke.yaml  train_template.yaml
scripts/mdgfm/: finetune.py  finetune_graph.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
scripts/mdgpt/: finetune.py  finetune_graph.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
scripts/mdgpt/configs/: finetune.yaml  finetune_graph.yaml  generate_downstream.yaml  pretrain.yaml  run_1shot_100task.yaml
scripts/multigprompt/: execute.py
scripts/multigprompt/configs/: example_cora.yaml
scripts/oneforall/: run.py
scripts/oneforall/configs/: run_template.yaml  smoke.yaml  smoke_stub.yaml
scripts/rag_gfm/: README.md  build_corpus.py  build_motif_lib.py  finetune.py  finetune_graph.py  pretrain.py
scripts/rag_gfm/tmp/: migrate_tjc_www_downstream.py
scripts/sa2gfm/: README.md  _setup_repo.py  attack_metattack.py  attack_random.py  attack_targeted_nettack.py  attack_train_surrogate.py  detect.py  generate_fewshot.py
scripts/sa2gfm/configs/: downstream.yaml  pretrain.yaml
scripts/samgpt/: finetune.py  finetune_graph.py  generate_downstream.py  pretrain.py  run_1shot_100task.py
src/pygfm/: __init__.py  __main__.py
src/pygfm/baseline_models/gcot/: __init__.py  downprompt.py  downprompt_graph.py  preprompt.py
src/pygfm/baseline_models/graphgpt/model/: GraphLlama.py
src/pygfm/baseline_models/graphgpt/train/: train_graph.py
src/pygfm/baseline_models/graphkeeper/: __init__.py
src/pygfm/baseline_models/graphmore/: preprompt.py
src/pygfm/baseline_models/graphprompt/: __init__.py
src/pygfm/baseline_models/graphtext/: __init__.py
src/pygfm/baseline_models/graphtext/eval/: run_icl.py
src/pygfm/baseline_models/graphtext/graph_text/: model.py
src/pygfm/baseline_models/graphtext/train/: run_sft.py
src/pygfm/baseline_models/graver/: __init__.py  downprompt.py  downprompt_graph.py  preprompt.py
src/pygfm/baseline_models/llaga/model/: builder.py
src/pygfm/baseline_models/llaga/train/: train.py
src/pygfm/baseline_models/mdgfm/: __init__.py  downprompt.py  downprompt_graph.py  preprompt.py
src/pygfm/baseline_models/mdgpt/: __init__.py
src/pygfm/baseline_models/multigprompt/: downprompt.py  paths.py
src/pygfm/baseline_models/multigprompt/utils/: process.py
src/pygfm/baseline_models/oneforall/: paths.py  run_cdm.py
src/pygfm/baseline_models/oneforall/data/: __init__.py  ofa_data.py  torch_io.py
src/pygfm/baseline_models/rag_gfm/: __init__.py
src/pygfm/baseline_models/sa2gfm/: __init__.py  paths.py
src/pygfm/baseline_models/samgpt/: __init__.py  downprompt.py  downprompt_graph.py  preprompt.py
src/pygfm/cli/: baseline_registry.py  mdgpt_stages.py  script_runner.py
src/pygfm/cli/baselines/: stub_config.py
src/pygfm/public/cli/: multigprompt_config.py  yaml_config.py  yaml_flat_to_argv.py
src/pygfm/public/utils/: runtime.py
tools/: bundle_scripts_for_wheel.py
(+59 files in other folders)
