[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-gfm"
version = "0.1.18"
authors = [
  { name = "BUAA SKLCCSE", email = "your.email@example.com" },
]
description = "An AI copilot for graph data and models (Under active development)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.20",
  "pyyaml>=6",
]

# Optional ML / GFM stack (default target: Python 3.12, Linux x86_64, CUDA 12.8).
# Torch and PyG extension versions are pinned to match:
#   https://data.pyg.org/whl/torch-2.8.0+cu128.html
#
# Typical install:
#   pip install torch==2.8.0 --index-url https://download.pytorch.org/whl/cu128
#   pip install "python-gfm[torch]" -f https://data.pyg.org/whl/torch-2.8.0+cu128.html
#
# The -f URL is required so pip picks the +pt28cu128 wheels for torch-scatter / torch-sparse /
# torch-cluster / torch-spline-conv. CPU-only torch: use https://data.pyg.org/whl/torch-2.8.0+cpu.html
# and install torch from PyPI or the PyTorch CPU index instead.
#
# Three optional groups (install combinations as in README):
#   ``torch`` — CUDA PyTorch + **torch-geometric** (+ scatter/sparse/cluster/spline) + graph libs (ogb, geoopt, deeprobust); use PyG ``-f`` wheels with torch.
#   ``light`` — science / config / HTTP / APIs + **transformers** (no torch wheel); Gradio / W&B / SwanLab; install with ``[torch,light]`` for full GNN+tokenizer paths.
#   ``llm`` — LLM training/inference stack (Transformers, OpenAI SDK, hydra-core/OmegaConf/EasyDict, fschat, Ray, GCP, DeepSpeed). Do **not** ``pip install hydra`` (wrong PyPI project). Gradio / W&B / SwanLab live under ``light``.
# GPU: pip install "python-gfm[torch,light]" + --extra-index-url PyTorch + -f PyG (never use PyTorch as --index-url).
# (Linux: use \\ line continuation instead of ^.) For direct manylinux cp312+cu128 torch URLs,
# keep using a requirements file or pass the wheel URLs as constraints — they are not portable in metadata.
[project.optional-dependencies]
torch = [
  "torch==2.8.0",
  # OneForAll ``run_cdm`` / ``gp.lightning`` (Trainer, WandbLogger, metrics).
  "lightning>=2.2.0,<3",
  "torchmetrics>=1.3.0",
  "torch-geometric==2.7.0",
  "torch-scatter==2.1.2",
  "torch-sparse==0.6.18",
  "torch-cluster==1.6.3",
  "torch-spline-conv==1.2.2",
  "ogb==1.3.6",
  "geoopt==0.5.1",
  "deeprobust>=0.2.4",
  "scipy>=1.9.0",
  "joblib>=1.3.0",
  "scikit-learn>=1.3.0",
  "ftfy>=6.1.0",
  "regex>=2023.0.0",
  "accelerate>=0.26.0",
]
light = [
  "numpy==2.3.2",
  "scipy==1.17.1",
  "pandas==3.0.2",
  "scikit-learn==1.8.0",
  "joblib==1.5.3",
  "networkx==3.5",
  "torch-geometric==2.7.0",
  "numba==0.65.0",
  "matplotlib==3.10.5",
  "PyYAML==6.0.2",
  "hydra-core==1.3.2",
  "omegaconf==2.3.0",
  "easydict==1.13",
  "pytz>=2024.1",
  "bidict>=0.22.0",
  "tqdm==4.67.3",
  "requests==2.33.1",
  "httpx==0.28.1",
  "pydantic==2.13.0",
  "psutil==7.0.0",
  "regex==2026.4.4",
  "ftfy==6.3.1",
  "huggingface-hub==1.10.2",
  "transformers>=4.36.0",
  "openai==2.31.0",
  "anthropic>=0.40.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "shortuuid>=1.0.0",
  "nano-vectordb==0.0.4.3",
  "gdown==5.2.0",
  "einops==0.8.2",
  "gradio>=5.0.0",
  "wandb>=0.19.0",
  "swanlab>=0.7.11,<0.8",
]
llm = [
  "transformers==5.5.4",
  "tokenizers==0.22.2",
  "safetensors==0.7.0",
  "hydra-core==1.3.2",
  "omegaconf==2.3.0",
  "easydict==1.13",
  "pytz>=2024.1",
  "bidict>=0.22.0",
  "accelerate==1.13.0",
  "bitsandbytes==0.49.2",
  "peft==0.19.0",
  "datasets==4.8.4",
  "openai==2.31.0",
  "nano-vectordb==0.0.4.3",
  "sentence-transformers==5.4.1",
  "fschat>=0.2.36",
  "ray[default]>=2.40.0",
  "google-cloud-aiplatform>=1.38.0",
  "deepspeed==0.18.9",
]
dev = ["pytest", "ruff"]

[project.scripts]
pygfm = "pygfm.cli.run_yaml:main"
gfm = "pygfm.cli.run_yaml:main"
gfm-download = "pygfm.tool_download:main"
gfm-sa2gfm-pretrain = "pygfm.cli.sa2gfm:pretrain_main"
gfm-sa2gfm-downstream = "pygfm.cli.sa2gfm:downstream_main"

[tool.setuptools.packages.find]
where = ["src", "scripts", "ckpts"]
include = ["pygfm*"]

# Ship scripts/ as a zip next to pygfm so ``pip install`` can run YAML without a git checkout.
[tool.setuptools.package-data]
pygfm = [
  "_scripts_bundle.zip",
  # OneForAll ``scripts/oneforall/run.py`` loads ``default_config.yaml`` from the installed package.
  "baseline_models/oneforall/configs/*.yaml",
]